--- a/views/index.erb
+++ b/views/index.erb
@@ -3,19 +3,19 @@
   <h5>Section 1</h5>
   <p>Input text for you want to convert...</p>
   <div class="row">
-    <form method="post" action="/convert" class="col s12">
+    <form method="post" action="/pest_index" class="col s12">
       <div class="row">
         <div class="input-field col s12">
           <textarea name="section_1_result_id" class="materialize-textarea"></textarea>
           <label for="textarea1">Textarea</label>
         </div>
       </div>
-      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+      <button class="btn waves-effect waves-light" type="submit" name="action">PEST分析
         <i class="material-icons right">send</i>
       </button>
     </form>
   </div>
-  <div><%= @section_1_result %></div>
+  <div class="row"><%= @section_1_result %></div>
 </div>
 <div class="divider"></div>
 <div class="section">
